Fix RAGAgent infrastructure resource secrets

--- a/RAG-Agent/gcloud_secret.yml
+++ b/RAG-Agent/gcloud_secret.yml
@@ -3,6 +3,13 @@ kind: Secret
 type: Opaque
 metadata:
   name: gcloud-secret
+data: k create secret generic ragagent-secret --from-file=/usr/src/Python/rag-agent/.env
+---
+apiVersion: v1
+kind: Secret
+type: Opaque
+metadata:
+  name: gcloud-secret
 data:
   application_default_credentials.json: |
     k create secret generic gcloud-secret --from-file=~/.config/gcloud/application_default_credentials.json
